# AgentSpine

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  DEVELOPMENT.md  EVENTS.md  OBSERVABILITY.md  TOOL_UI.md
examples/: README.md  demo_mock.py  demo_real.py
src/: __init__.py  agent.py  context_estimate.py  context_manager.py  lane_queue.py  prompt_builder.py  session.py  session_store.py  subagent_registry.py  subagent_runtime.py  tools.py
src/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: test_agent_steering_and_lifecycle.py  test_context_estimate.py  test_context_manager.py  test_prompt_builder.py  test_session_store.py  test_tools.py
